# MangRAG

./: .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  docker-compose.yml  evaluate.py  main.py  pyproject.toml  rag.py  requirements.txt
mangrag/: __init__.py  config.py  db.py  embeddings.py  eval.py  ingest.py  llm.py  models.py  query.py
mangrag/retrieval/: bm25_retriever.py  faiss_retriever.py  hybrid.py  index.py
tests/: test_pipeline.py
